# dbt-sentry

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
dbt_sentry/: artefact.py  audit.py  ci.py  client.py  compare_relation_resolver.py  generate.py  main.py  markdown_builder.py  options.py  output_formatter.py  query_builder.py  query_runner.py  settings.py  template_query.py  utils.py
dbt_sentry/artefact/: manifest.py
jaffle_shop/: package-lock.yml  profiles.yml
jaffle_shop/dbtci/: test_2.sql  test_3.sql
jaffle_shop/dbtci2/: test_3.sql
jaffle_shop/macros/: compare_columns_metrics.sql
jaffle_shop/models/: test_macro.sql  test_macro_2.sql  test_macro_3.sql
jaffle_shop/models/staging/: stg_payments.sql
jaffle_shop/testci/: test_2.sql
tests/: test_audit.py  test_ci.py
tests/sql/: custom_query_error.sql
